# ollama-langserve-streamlit

./: .gitignore  docker-compose.yaml
backend/: .gitignore  Dockerfile  Notes  pyproject.toml
backend/app/: server.py
frontend/: Dockerfile  app.py
workout/: .gitignore  rag-chain-local-llm.ipynb  requirements.txt
